Fixing banner alignment

--- a/KegUI/app/styles/responsive.styl
+++ b/KegUI/app/styles/responsive.styl
@@ -6,15 +6,14 @@
     text-align: center
 
     > div
-      width: 160px
       margin: 0 auto
+      width: 160px
 
   #keg_wrap
     margin-bottom: 10px
 
   #brand_banner_wrap
     width: 310px
-    margin: -5px auto
 
     > div
       width: 298px
@@ -34,8 +33,7 @@
         width: 189px
 
     #brand_banner_wrap
-      width: 310px
-      float: right
+      margin: 0
 
       > div
         width: 298px
